@@ -1,8 +1,13 @@
+2002-01-04  Anders Carlsson  <andersca@gnu.org>
+
+	* bonobo/bonobo-ui-sync-status.c: Show the resize grip by default, and
+	only disable it if resize_grip is set to 0.
+
 2002-01-03  Bill Haneman  <bill.haneman@sun.com>
 
 	* bonobo/bonobo-socket.h:
 	Add missing BONOBO_TYPE_SOCKET macro.
-	
+
 2002-01-03  Anders Carlsson  <andersca@gnu.org>
 
 	* bonobo/bonobo-ui-sync-toolbar.c (impl_bonobo_ui_sync_toolbar_update_root): 
